[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Player_Greenbox.gd" type="Script" id=1]
[ext_resource path="res://Visual/Old/spr_PlayerRight_Alt.png" type="Texture" id=2]
[ext_resource path="res://Visual/Old/spr_PlayerRight.png" type="Texture" id=3]
[ext_resource path="res://Visual/Old/spr_PlayerRight_Alt - kopie.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.5806, 29.1667 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.8064, 20.8333 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 7
script = ExtResource( 1 )

[node name="stand" type="Polygon2D" parent="."]
visible = false
color = Color( 0.258824, 0.698039, 0.235294, 1 )
polygon = PoolVector2Array( -20, -64, 20, -64, 20, 0, -20, 0 )

[node name="col_stand" type="CollisionShape2D" parent="."]
position = Vector2( 0, -28 )
scale = Vector2( 1.24, 0.96 )
shape = SubResource( 1 )

[node name="slide" type="Polygon2D" parent="."]
visible = false
color = Color( 0.258824, 0.698039, 0.235294, 1 )
polygon = PoolVector2Array( -32, -40, 32, -40, 32, 0, -32, 0 )

[node name="col_slide" type="CollisionShape2D" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 1.24, 0.96 )
shape = SubResource( 2 )
disabled = true

[node name="Old" type="Node2D" parent="."]

[node name="spr_PlayerRight" type="Sprite" parent="Old"]
position = Vector2( 0, -28 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="spr_PlayerRight_Alt" type="Sprite" parent="Old"]
visible = false
position = Vector2( 0, -28 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="spr_PlayerRight_Dead" type="Sprite" parent="Old"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -28 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
